06/09/09 (Olaf)
Moved the identifier based graph implementation from 'de.fuberlin.wiwiss.ng4j.semwebclient.graph' to 'de.fuberlin.wiwiss.ng4j.impl.idbased'.

06/09/09 (Olaf)
Fixed bug in the fix introduced on 04/13/09

06/08/09 (Jennifer)
Fixed bugs in classes (SWPNamedGraphSetImpl and SWPWarrantImpl) where bitwise and was used instead of logical and.

06/03/09 (Jennifer)
Upgraded the Bouncy Castle libraries from version 1.41 to version 1.43.

05/27/09 (Jennifer)
Simplify and improve NamedGraphModel code.
Add classes SingleNamedGraphModel, SingleNamedGraphStatement, SingleNamedGraphResourceImpl, and SingleNamedGraphStatementIterator.

05/24/09 (Olaf)
Enabled the new BGP query evaluation commited on 05/08/09. For details see:
  http://apps.sourceforge.net/wordpress/squin/2009/05/24/new-bgp-query-handler-for-the-semantic-web-client-library-reduces-query-times-to-a-third/

05/23/09 (Olaf)
Bug fixes in the SemWebClLib: eliminated two concurrency issues

05/10/09 (Olaf)
Bug fix in the SemWebClLib: eliminated a memory leak in the TimeoutThread of FindQuery

05/08/09 (Olaf)
First commit of a new implementation for BGP query evaluation that can be used for RDF graph implementations which use identifiers for RDF nodes

05/08/09 (Olaf)
Bug fix in the SemWebClLib: eliminated a concurrency issue in TaskQueueBase

05/07/09 (Olaf)
Minor performance improvement - implemented a custom determination of the size of a SWClGraphMem

04/25/09 (Olaf)
Finished the SemWebClLib-specific Graph implementation which improves performance of query executions. For details see:
  http://apps.sourceforge.net/wordpress/squin/2009/04/25/identified-a-proper-index-size-for-the-new-swcllib-storage-solution/

04/13/09 (Olaf)
Fixed bug in TriG writer - some namespace prefixes were used without being defined

02/08/09 (Olaf)
First commit of a SemWebClLib-specific Graph implementation which improves performance of query executions. For details see: